Created a bootstrap layout

--- a/views/contact.gohtml
+++ b/views/contact.gohtml
@@ -1,6 +1,8 @@
-To get in touch, please email
-<a href="mailto:SUPERsupport@lenslocked.com">
-  SUPERsupport@lenslocked.com
-</a>.
+{{define "yield"}}
+  <h1>To get in touch, please email</h1>
+  <a href="mailto:SUPERsupport@lenslocked.com">
+    SUPERsupport@lenslocked.com
+  </a>.
 
-{{template "footer"}}
+  {{template "footer"}}
+{{end}}
