--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -1,3 +1,5 @@
-<h1>Welcome to the cornholio site</h1>
+{{define "yield"}}
+  <h1>Welcome to the cornholio site</h1>
 
-{{template "footer"}}
+  {{template "footer"}}
+{{end}}
