--- a/views/signup.gohtml
+++ b/views/signup.gohtml
@@ -1,4 +1,20 @@
 {{define "yield"}}
+
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Sign up now!</h3>
+      </div>
+      <div class="panel-body">
+        {{template "signupForm"}}
+      </div>
+    </div>
+  </div>
+</div>
+{{end}}
+
+{{define "signupForm"}}
 <form>
   <div class="form-group">
     <label for="email">Email address</label>
@@ -7,7 +23,7 @@
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input type="password" name="password" class="form-control" id="password" placeolder="Password">
+    <input type="password" name="password" class="form-control" id="password" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">
     Sign Up
