--- a/views/users/new.gohtml
+++ b/views/users/new.gohtml
@@ -17,8 +17,13 @@
 {{define "signupForm"}}
 <form action="signup" method="POST">
   <div class="form-group">
+    <label for="name">Name</label>
+    <input type="text" name="name" class="form-control" id="name" placeholder="Your Full Name" 
+      id="name" placeholder="Email">
+  </div>
+    <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" name="email" class="form-control" 
+    <input type="email" name="email" class="form-control" id="email" 
       id="email" placeholder="Email">
   </div>
   <div class="form-group">
