--- a/views/users/login.gohtml
+++ b/views/users/login.gohtml
@@ -4,23 +4,18 @@
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Sign up now!</h3>
+        <h3 class="panel-title">Welcome back!</h3>
       </div>
       <div class="panel-body">
-        {{template "signupForm"}}
+        {{template "loginForm"}}
       </div>
     </div>
   </div>
 </div>
 {{end}}
 
-{{define "signupForm"}}
-<form action="/signup" method="POST">
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" name="name" class="form-control" id="name" placeholder="Your Full Name" 
-      id="name" placeholder="Email">
-  </div>
+{{define "loginForm"}}
+<form action="/login" method="POST">
     <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" name="email" class="form-control" id="email" 
@@ -31,7 +26,7 @@
     <input type="password" name="password" class="form-control" id="password" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">
-    Sign Up
+    Login
   </button>
 </form>
 {{end}}
