added delete action to gallery controller

--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -23,4 +23,9 @@
     Update
   </button>
 </form>
+<form action="/galleries/{{.ID}}/delate" method="POST">
+  <button type="submit" class="btn btn-danger">
+    Delete
+  </button>
+</form>
 {{end}}
