--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -23,7 +23,7 @@
     Update
   </button>
 </form>
-<form action="/galleries/{{.ID}}/delate" method="POST">
+<form action="/galleries/{{.ID}}/delete" method="POST">
   <button type="submit" class="btn btn-danger">
     Delete
   </button>
