--- a/views/galleries/edit.gohtml
+++ b/views/galleries/edit.gohtml
@@ -2,6 +2,8 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <h2>Edit your gallery</h3>
+    <a href="/galleries/{{.ID}}">
+      View
     <hr>
   </div>
   <div class="col-md-12">
@@ -76,11 +78,19 @@
 {{end}}
 
 {{define "galleryImages"}}
-<ul>
-  {{range .Images}}
-    <li>
-      {{.}}
-    </li>
-  {{end}}
-</ul>
+  {{range .ImagesSplitN 6}}
+    <div class="col-md-2">
+      {{range .}}
+        <a href="{{.}}">
+          <img src="{{.}}" class="thumbnail">
+        </a>
+      {{end}}
+    </div>
+  {{end}} 
+
+  <style>
+    .thumbnail {
+      width: 100%;
+    }
+  </style>
 {{end}}
