setup a static file server for assets CSS HTML JS and image

--- a/views/layouts/bootstrap.gohtml
+++ b/views/layouts/bootstrap.gohtml
@@ -3,8 +3,8 @@
 <html lang="en">
   <head>
     <title>LensLocked.com</title>
-    <link 
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -23,11 +23,6 @@
     </script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     </script>
-    <style>
-      footer {
-        padding-top: 100px;
-      }
-    </style>
   </body>
 </html>
 {{end}}
