--- a/views/users/reset_pw.gohtml
+++ b/views/users/reset_pw.gohtml
@@ -1,36 +1,34 @@
 {{define "yield"}}
-
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-8 col-md-offset-2">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Welcome back!</h3>
+        <h3 class="panel-title">Reset your password</h3>
       </div>
       <div class="panel-body">
-        {{template "loginForm"}}
+        {{template "resetPwForm" .}}
       </div>
       <div class="panel-footer">
-        <a href="/forgot">Forgot your password?</a>
+        <a href="/forgot">Need to request a new token?</a>
       </div>
     </div>
   </div>
 </div>
 {{end}}
 
-{{define "loginForm"}}
-<form action="/login" method="POST">
+{{define "resetPwForm"}}
+<form action="/reset" method="POST">
    {{csrfField}}
-   <div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" name="email" class="form-control" id="email" 
-      id="email" placeholder="Email">
+ <div class="form-group">
+    <label for="token">Reset Token</label>
+    <input type="text" name="token" class="form-control" id="token" placeholder="You will receive this via email" value="{{.Token}}">
   </div>
   <div class="form-group">
     <label for="password">Password</label>
     <input type="password" name="password" class="form-control" id="password" placeholder="Password">
   </div>
   <button type="submit" class="btn btn-primary">
-    Login
+    Submit
   </button>
 </form>
 {{end}}
